Bug 123786 - LO: I can't type an apostrophe correclty
Summary: LO: I can't type an apostrophe correclty
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords:
: 123881 (view as bug list)
Depends on:
Blocks: AutoCorrect-Complete Shortcuts-Locale User-Locale
  Show dependency treegraph
 
Reported: 2019-03-01 12:39 UTC by Vera Blagoveschenskaya
Modified: 2020-07-05 20:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screen1 (2.01 KB, image/png)
2019-03-01 12:39 UTC, Vera Blagoveschenskaya
Details
screen2 (24.46 KB, image/png)
2019-03-01 12:39 UTC, Vera Blagoveschenskaya
Details
keyboard (72.16 KB, image/jpeg)
2019-03-01 12:40 UTC, Vera Blagoveschenskaya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vera Blagoveschenskaya 2019-03-01 12:39:01 UTC
Description:
I can't type an apostrophe correclty

Steps to Reproduce:
1. Open LO Writer / LO Calc
2. Print phrase "I can't type an apostrophe"
3. See the result 

Actual Results:
Apostrophe is shown with two symbols ' - like ''
See screen

When I use another applications (mail, notepad, etc) - apostrophe is shown correctly

Expected Results:
Apostrophe with one '


Reproducible: Always


User Profile Reset: No



Additional Info:
Reproduced for 

Version: 6.3.0.0.alpha0+
Build ID: 5413c8871dec08eff19f514f5f391b946a45c86c
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-02-27_23:42:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

Версия: 6.0.7.3.0+
ID сборки: 00m0(Build:3)
Потоков ЦП: 4; ОС:Linux 4.19; Отрисовка ИП: по умолчанию; VCL: gtk3; 
Локаль: ru-RU (ru_RU.utf8); Calc: group
Comment 1 Vera Blagoveschenskaya 2019-03-01 12:39:30 UTC
Created attachment 149673 [details]
screen1
Comment 2 Vera Blagoveschenskaya 2019-03-01 12:39:43 UTC
Created attachment 149674 [details]
screen2
Comment 3 Vera Blagoveschenskaya 2019-03-01 12:40:01 UTC
Created attachment 149675 [details]
keyboard
Comment 4 Roman Kuznetsov 2019-03-02 15:48:33 UTC
don't repro in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 47c498417248444cab4e8f597ddeec4e0d585a71
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-02-21_08:39:21
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

Only Linux build problem
Comment 5 Aleksei Nikiforov 2019-03-05 11:26:43 UTC
I can reproduce issue if ru_RU.UTF-8 locale is used. If I set LC_ALL=C, issue disappears. Tested with "gen", "gtk3" and "kde5" SAL plugins.

Version: 6.3.0.0.alpha0+
Build ID: e85e38662ab84141c43e6c9b52d4a5f50bcf8ec1
CPU threads: 12; OS: Linux 4.19; UI render: default; VCL: kde5; 
Locale: en-US (C); UI-Language: en-US
Calc: threaded
Comment 6 Julien Nabet 2019-03-05 18:20:13 UTC
*** Bug 123881 has been marked as a duplicate of this bug. ***
Comment 7 Julien Nabet 2019-03-05 20:30:39 UTC
On pc Debian x86-64 with master sources updated today + gtk3 + enable-dbgutil, I confirm I can reproduce this when using ru_RU.UTF-8 locale as Aleksei indicated in comment 5.
I saw nothing in console logs which may give some hints.
Comment 8 Aleksei Nikiforov 2019-03-06 12:20:03 UTC
If I go to menu "Tools" -> "AutoCorrect" and uncheck "While Typing", the quote is no longer replaced by double quote.

If I open dialog via menu "Tools" -> "AutoCorrect" -> "AutoCorrect Options...", open "Localized Options" tab and uncheck "Single Quotes replace" checkbox, issue disappears as well.
Comment 9 Kovács Viktor 2019-03-07 14:25:57 UTC
(In reply to Aleksei Nikiforov from comment #8)
> If I go to menu "Tools" -> "AutoCorrect" and uncheck "While Typing", the
> quote is no longer replaced by double quote.
> 
> If I open dialog via menu "Tools" -> "AutoCorrect" -> "AutoCorrect
> Options...", open "Localized Options" tab and uncheck "Single Quotes
> replace" checkbox, issue disappears as well.

Thanks, It works form me.
Comment 10 Vera Blagoveschenskaya 2019-03-07 14:35:28 UTC
Question 2 LO Dev team:
Can I close this issue as 'WFM' after performing steps from https://bugs.documentfoundation.org/show_bug.cgi?id=123786#c8?

Or maybe better set this option to 'unchecked' by default?
"Tools" -> "AutoCorrect" -> "While Typing"
Comment 11 Xisco Faulí 2019-04-03 10:33:41 UTC
Hi Vera,
Could you please check if it's happening with older versions of LibreOffice ?
Comment 12 Vera Blagoveschenskaya 2019-04-03 11:44:09 UTC
Hi,
also reproduced for

Версия: 5.3.7.2.0+
ID сборки: 30m0(Build:2)
Потоков ЦП: 1; Версия ОС: Linux 4.9; Отрисовка ИП: по умолчанию; VCL: gtk3; Способ разметки: новый; 
Локаль: ru-RU (ru_RU.utf8); Calc: group
Comment 13 Commit Notification 2020-06-26 07:03:59 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d4b6e5858935c4a32f89b9e09c5f1084d34a04c

tdf#123786 AutoCorrect: fix apostrophe in Russian

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 László Németh 2020-06-26 11:42:30 UTC
Now typing the sign ' outside of first level quotation marks (and after letters) will result apostrophes, as requested.

@Vera: Thanks for reporting the problem!
Comment 15 Commit Notification 2020-07-05 20:52:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/f9943909d26530eea6351c88745fa5bc2e1df946

tdf#123786 AutoCorrect: fix apostrophe in Russian

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.