tdf#123786 AutoCorrect: fix apostrophe in Russian

and Ukrainian at "Single quotes" replacement
outside of second level quotations.

For example:

„quote' -> „quote‘

but now

apostrophe' -> apostrophe’

instead of the bad

apostrophe' -> apostrophe“

Change-Id: Iad69b7f88ab9677f25ee0f806d035e16cdebe29b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97096
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>