sw/qa/extras/uiwriter/uiwriter.cxx
@@ -370,6 +370,7 @@ public:
     void testTdf59666();
     void testTdf133524();
     void testTdf128860();
+    void testTdf123786();
     void testTdf133589();
     void testInconsistentBookmark();
     void testInsertLongDateFormat();
@@ -588,6 +589,7 @@ public:
     CPPUNIT_TEST(testTdf59666);
     CPPUNIT_TEST(testTdf133524);
     CPPUNIT_TEST(testTdf128860);
+    CPPUNIT_TEST(testTdf123786);
     CPPUNIT_TEST(testTdf133589);
     CPPUNIT_TEST(testInsertLongDateFormat);
 #if HAVE_FEATURE_PDFIUM
@@ -7272,6 +7274,31 @@ void SwUiWriterTest::testTdf128860()
     pWrtShell->AutoCorrect(corr, '\'');
     nIndex = pWrtShell->GetCursor()->GetNode().GetIndex();
     sReplaced += u" word.‘";
+    CPPUNIT_ASSERT_EQUAL(sReplaced, static_cast<SwTextNode*>(pDoc->GetNodes()[nIndex])->GetText());
+}
+
+void SwUiWriterTest::testTdf123786()
+{
+    SwDoc* pDoc = createDoc("tdf123786.fodt");
+    SwWrtShell* pWrtShell = pDoc->GetDocShell()->GetWrtShell();
+    // Second level ending quote: „word' -> „word“
+    SwAutoCorrect corr(*SvxAutoCorrCfg::Get().GetAutoCorrect());
+    pWrtShell->Insert(u"„слово");
+    pWrtShell->AutoCorrect(corr, '\'');
+    sal_uLong nIndex = pWrtShell->GetCursor()->GetNode().GetIndex();
+    OUString sReplaced(u"„слово“");
+    CPPUNIT_ASSERT_EQUAL(sReplaced, static_cast<SwTextNode*>(pDoc->GetNodes()[nIndex])->GetText());
+    // Us apostrophe without preceding starting quote: word' -> word’
+    pWrtShell->Insert(u" слово");
+    pWrtShell->AutoCorrect(corr, '\'');
+    nIndex = pWrtShell->GetCursor()->GetNode().GetIndex();
+    sReplaced += u" слово’";
+    CPPUNIT_ASSERT_EQUAL(sReplaced, static_cast<SwTextNode*>(pDoc->GetNodes()[nIndex])->GetText());
+    // But only after letters: word.' -> word.“
+    pWrtShell->Insert(u" слово.");
+    pWrtShell->AutoCorrect(corr, '\'');
+    nIndex = pWrtShell->GetCursor()->GetNode().GetIndex();
+    sReplaced += u" слово.“";
     CPPUNIT_ASSERT_EQUAL(sReplaced, static_cast<SwTextNode*>(pDoc->GetNodes()[nIndex])->GetText());
 }
 
